# arabic-transliteration

./: README.md  arabic-transliteration.cabal
src/: Buckwalter.hs  ISO232.hs  ISO233_2.hs  Main.hs
test/: BuckwalterTests.hs  ISO232Tests.hs  ISO233_2Tests.hs  Test.hs
