name:                arabic-transliteration
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/arabic-transliteration#readme
license:             BSD3
-- license-file:        LICENSE
author:              Elsanussi Mneina
maintainer:          elsanussi.m@outlook.com
copyright:           2019 Elsanussi Mneina
category:            Linguistics
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md


executable arabic-transliteration
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , random-shuffle
--  other-modules:

-- test-suite flashcard-console-test
--  type:                exitcode-stdio-1.0
--  default-language:    Haskell2010
--  hs-source-dirs:      test, src
--  main-is:             Test.hs
--  build-depends:       base >= 4.7 && < 5, hspec
--  other-modules:
