name:                arabic-transliteration
version:             0.1.0.1
-- synopsis:
description: A way to represent Arabic text in Latin letters using the Buckwalter transliteration system, or the ISO-232 system.
homepage:            https://github.com/elsanussi-s-mneina/arabic-transliteration#readme
license:             BSD3
-- license-file:        LICENSE
author:              Elsanussi Mneina
maintainer:          elsanussi.m@outlook.com
copyright:           2020 Elsanussi Mneina
category:            Linguistics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


executable arabic-transliteration
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Buckwalter, ISO233_2

test-suite arabic-transliteration-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test, src
  main-is:             Test.hs
  build-depends:       base >= 4.7 && < 5
  other-modules:       Buckwalter, BuckwalterTests, LittleTest,
                       ISO233_2, ISO233_2Tests
